DBProject1/src/SimpleDBMSParser.java
/* Generated By:JavaCC: Do not edit this line. SimpleDBMSParser.java */
import db.*;
import db.where.*;
import java.util.*;

public class SimpleDBMSParser implements SimpleDBMSParserConstants {
  private static SimpleDBMS dbms = new SimpleDBMS();

  public static void main(String args[]) throws ParseException, ErrorException
  {
    SimpleDBMSParser parser = new SimpleDBMSParser(System.in);
    System.out.print("DB_2013-11422> ");

    while (true)
    {
      try
      {
        parser.command();
      }
      catch (ParseException e)
      {
        PrintMessages p = new PrintMessages(Flags.SYNTAX_ERROR);
        p.print();
        SimpleDBMSParser.ReInit(System.in);
      }
      catch (ErrorException e)
      {
        e.p.print();
        SimpleDBMSParser.ReInit(System.in);
      }
    }
  }

// grammar file Í∑∏Î?Î°? Íµ¨ÌòÑ
  static final public void command() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case CREATE_TABLE:
    case DROP_TABLE:
    case DESC:
    case INSERT:
    case DELETE:
    case SELECT:
    case SHOW_TABLES:
      queryList();
      break;
    case EXIT:
      jj_consume_token(EXIT);
      jj_consume_token(SEMICOLON);
      dbms.close();
      System.exit(0);
      break;
    default:
      jj_la1[0] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void queryList() throws ParseException {
                     PrintMessages p;
    label_1:
    while (true) {
      p = query();
      jj_consume_token(SEMICOLON);
      p.print();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CREATE_TABLE:
      case DROP_TABLE:
      case DESC:
      case INSERT:
      case DELETE:
      case SELECT:
      case SHOW_TABLES:
        ;
        break;
      default:
        jj_la1[1] = jj_gen;
        break label_1;
      }
    }
  }

  static final public PrintMessages query() throws ParseException {
                          PrintMessages p;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case CREATE_TABLE:
      p = createTableQuery();
                             {if (true) return p;}
      break;
    case DROP_TABLE:
      p = dropTableQuery();
                           {if (true) return p;}
      break;
    case DESC:
      p = descQuery();
                      {if (true) return p;}
      break;
    case INSERT:
      p = insertQuery();
                        {if (true) return p;}
      break;
    case DELETE:
      p = deleteQuery();
                        {if (true) return p;}
      break;
    case SELECT:
      p = selectQuery();
                        {if (true) return p;}
      break;
    case SHOW_TABLES:
      p = showTablesQuery();
                            {if (true) return p;}
      break;
    default:
      jj_la1[2] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
      {if (true) return p;}
    throw new Error("Missing return statement in function");
  }

  static final public PrintMessages createTableQuery() throws ParseException {
                                     String tn; Table t; ArrayList<Column> cl;
    jj_consume_token(CREATE_TABLE);
    tn = tableName();
    if (dbms.isExistingTable(tn)) {
      {if (true) throw new ErrorException(Flags.TABLE_EXISTENCE_ERROR);}
    } else {
      t = new Table(tn);
    }
    tableElementList(t);
    dbms.createTable(t);
    {if (true) return new PrintMessages(Flags.CREATE_TABLE_DONE, tn);}
    throw new Error("Missing return statement in function");
  }

  static final public PrintMessages dropTableQuery() throws ParseException {
                                   String tn;
    jj_consume_token(DROP_TABLE);
    tn = tableName();
    if (!dbms.isExistingTable(tn)) {
      {if (true) throw new ErrorException(Flags.NO_SUCH_TABLE);}
    }

    Table t = dbms.getTable(tn);
    for (Column c: t.getColumns()) {
      if (c.getIsReferenced()) {
        {if (true) throw new ErrorException(Flags.DROP_REFERENCED_TABLE_ERROR, tn);}
      }
    }

    dbms.dropTable(tn);

    {if (true) return new PrintMessages(Flags.DROP_TABLE_DONE, tn);}
    throw new Error("Missing return statement in function");
  }

  static final public PrintMessages descQuery() throws ParseException {
                              String tn;
    jj_consume_token(DESC);
    tn = tableName();
    if (!dbms.isExistingTable(tn)) {
      {if (true) throw new ErrorException(Flags.NO_SUCH_TABLE);}
    }
    dbms.printTable(tn);
    {if (true) return new PrintMessages(Flags.DESC_DONE);}
    throw new Error("Missing return statement in function");
  }

  static final public PrintMessages insertQuery() throws ParseException {
                                String tn; ArrayList<Value> vl;
    jj_consume_token(INSERT);
    tn = tableName();
    vl = insertColumnsAndSource();
    dbms.insertValues(tn, vl);
    {if (true) return new PrintMessages(Flags.INSERT_DONE);}
    throw new Error("Missing return statement in function");
  }

  static final public PrintMessages deleteQuery() throws ParseException {
                                String tn; BooleanValueExpression bve = null; String count;
    jj_consume_token(DELETE);
    tn = tableName();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case WHERE:
      bve = whereClause();
      break;
    default:
      jj_la1[3] = jj_gen;
      ;
    }
    count = dbms.deleteValues(tn, bve);
    {if (true) return new PrintMessages(Flags.DELETE_DONE, count);}
    throw new Error("Missing return statement in function");
  }

  static final public PrintMessages selectQuery() throws ParseException {
    jj_consume_token(SELECT);
    selectList();
    tableExpression();
    {if (true) return new PrintMessages(Flags.NOTHING);}
    throw new Error("Missing return statement in function");
  }

  static final public PrintMessages showTablesQuery() throws ParseException {
    jj_consume_token(SHOW_TABLES);
    dbms.showTables();
    {if (true) return new PrintMessages(Flags.SHOW_TABLES_DONE);}
    throw new Error("Missing return statement in function");
  }

  static final public void tableElementList(Table t) throws ParseException {
                                   int key; boolean pk = false;
    jj_consume_token(LEFT_PAREN);
    key = tableElement(t);
    if (key == Flags.PRIMARY_KEY) {
      pk = true;
    }
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case COMMA:
        ;
        break;
      default:
        jj_la1[4] = jj_gen;
        break label_2;
      }
      jj_consume_token(COMMA);
      key = tableElement(t);
      if (key == Flags.PRIMARY_KEY) {
        if (pk == true) {
          {if (true) throw new ErrorException(Flags.DUPLICATE_PRIMARY_KEY_DEF_ERROR);}
        }
        pk = true;
      }
    }
    jj_consume_token(RIGHT_PAREN);
  }

  static final public int tableElement(Table t) throws ParseException {
                              Column c; int key = Flags.NOTHING;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LEGAL_IDENTIFIER:
      columnDefinition(t);
      break;
    case PRIMARY_KEY:
    case FOREIGN_KEY:
      key = tableConstraintDefinition(t);
      break;
    default:
      jj_la1[5] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
      {if (true) return key;}
    throw new Error("Missing return statement in function");
  }

  static final public void columnDefinition(Table t) throws ParseException {
                                   String cn; DataType dt; boolean isNull = true;
    cn = columnName();
    dt = dataType();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case NOT_NULL:
      jj_consume_token(NOT_NULL);
      isNull = false;
      break;
    default:
      jj_la1[6] = jj_gen;
      ;
    }
    t.addColumn(new Column(cn, dt, isNull));
  }

  static final public BooleanValueExpression whereClause() throws ParseException {
                                         BooleanValueExpression bve;
    jj_consume_token(WHERE);
    bve = booleanValueExpression();
    {if (true) return bve;}
    throw new Error("Missing return statement in function");
  }

  static final public ArrayList<Table> fromClause() throws ParseException {
                                  ArrayList<Table> tl;
    jj_consume_token(FROM);
    tl = tableReferenceList();
    {if (true) return tl;}
    throw new Error("Missing return statement in function");
  }

  static final public ArrayList<Table> tableReferenceList() throws ParseException {
                                          Table t; ArrayList<Table> tl;
    tl = new ArrayList<Table>();
    t = referedTable();
    tl.add(t);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case COMMA:
      jj_consume_token(COMMA);
      t = referedTable();
      tl.add(t);
      break;
    default:
      jj_la1[7] = jj_gen;
      ;
    }
    {if (true) return tl;}
    throw new Error("Missing return statement in function");
  }

  static final public Table referedTable() throws ParseException {
                         Table t; String tn; String newTn = null;
    tn = tableName();
    if (jj_2_1(4)) {
      jj_consume_token(AS);
      newTn = tableName();
    } else {
      ;
    }
    Table tt = dbms.getTable(tn);

    if (tt == null) {
      {if (true) throw new ErrorException(Flags.NO_SUCH_TABLE);}
    }

    if (newTn != null) {
      t = new Table(newTn, tt);
    } else {
      t = tt;
    }

    {if (true) return t;}
    throw new Error("Missing return statement in function");
  }

  static final public BooleanValueExpression booleanValueExpression() throws ParseException {
                                                    BooleanTerm bt; BooleanValueExpression bve;
    bve = new BooleanValueExpression();
    bt = booleanTerm();
    bve.addBooleanTerm(bt);
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case OR:
        ;
        break;
      default:
        jj_la1[8] = jj_gen;
        break label_3;
      }
      jj_consume_token(OR);
      bt = booleanTerm();
      bve.addBooleanTerm(bt);
    }
    {if (true) return bve;}
    throw new Error("Missing return statement in function");
  }

  static final public BooleanTerm booleanTerm() throws ParseException {
                              BooleanFactor bf; BooleanTerm bt;
    bt = new BooleanTerm();
    bf = booleanFactor();
    bt.addBooleanFactor(bf);
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case AND:
        ;
        break;
      default:
        jj_la1[9] = jj_gen;
        break label_4;
      }
      jj_consume_token(AND);
      booleanFactor();
      bt.addBooleanFactor(bf);
    }
    {if (true) return bt;}
    throw new Error("Missing return statement in function");
  }

  static final public BooleanFactor booleanFactor() throws ParseException {
                                  BooleanTest bt; boolean isNot = true;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case NOT:
      jj_consume_token(NOT);
      isNot = false;
      break;
    default:
      jj_la1[10] = jj_gen;
      ;
    }
    bt = booleanTest();
    {if (true) return new BooleanFactor(bt, isNot);}
    throw new Error("Missing return statement in function");
  }

  static final public BooleanTest booleanTest() throws ParseException {
                              Predicate p; BooleanValueExpression bve;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LEGAL_IDENTIFIER:
    case INT_VALUE:
    case DATE_VALUE:
    case CHAR_STRING:
      p = predicate();
    {if (true) return new BooleanTest(p);}
      break;
    case LEFT_PAREN:
      bve = parenthesizedBooleanExpression();
    {if (true) return new BooleanTest(bve);}
      break;
    default:
      jj_la1[11] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  static final public Predicate predicate() throws ParseException {
                          ComparisonPredicate cp; NullPredicate np;
    if (jj_2_2(4)) {
      // choice conflict Î∞úÏÉù, LOOKAHEAD ?Ç¨?ö©
        cp = comparisonPredicate();
    {if (true) return cp;}
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LEGAL_IDENTIFIER:
        np = nullPredicate();
    {if (true) return np;}
        break;
      default:
        jj_la1[12] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    throw new Error("Missing return statement in function");
  }

  static final public ComparisonPredicate comparisonPredicate() throws ParseException {
                                              Item left; Item right; String compOp;
    left = compOperand();
    jj_consume_token(COMP_OP);
    compOp = token.image;
    right = compOperand();
    {if (true) return new ComparisonPredicate(left, right, compOp);}
    throw new Error("Missing return statement in function");
  }

  static final public Item compOperand() throws ParseException {
                       Value v; String tn = null; String cn;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INT_VALUE:
    case DATE_VALUE:
    case CHAR_STRING:
      v = comparableValue();
    {if (true) return new Item(v);}
      break;
    case LEGAL_IDENTIFIER:
      if (jj_2_3(4)) {
        // choice conflict Î∞úÏÉù, LOOKAHEAD ?Ç¨?ö©
            tn = tableName();
        jj_consume_token(PERIOD);
      } else {
        ;
      }
      cn = columnName();
    {if (true) return new Item(tn, cn);}
      break;
    default:
      jj_la1[13] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  static final public BooleanValueExpression parenthesizedBooleanExpression() throws ParseException {
                                                            BooleanValueExpression bve;
    jj_consume_token(LEFT_PAREN);
    bve = booleanValueExpression();
    jj_consume_token(RIGHT_PAREN);
    {if (true) return bve;}
    throw new Error("Missing return statement in function");
  }

  static final public NullPredicate nullPredicate() throws ParseException {
                                  String tn = null; String cn; boolean isNull;
    if (jj_2_4(4)) {
      // choice conflict Î∞úÏÉù, LOOKAHEAD ?Ç¨?ö©
          tn = tableName();
      jj_consume_token(PERIOD);
    } else {
      ;
    }
    cn = columnName();
    isNull = nullOperation();
    {if (true) return new NullPredicate(new Item(tn, cn), isNull);}
    throw new Error("Missing return statement in function");
  }

  static final public boolean nullOperation() throws ParseException {
                           boolean isNull = true;
    jj_consume_token(IS);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case NOT:
      jj_consume_token(NOT);
      isNull = false;
      break;
    default:
      jj_la1[14] = jj_gen;
      ;
    }
    jj_consume_token(NULL);
    {if (true) return isNull;}
    throw new Error("Missing return statement in function");
  }

  static final public int tableConstraintDefinition(Table t) throws ParseException {
                                           ArrayList<String> pkcl; ArrayList<Column> cl;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case PRIMARY_KEY:
      pkcl = primaryKeyConstraint();
    // primary key list?óê Ï§ëÎ≥µ ?ûà?äî Í≤ΩÏö∞
    List<String> l = pkcl;
    Set<String> s = new HashSet<String>();
    s.addAll(l);
    if (s.size() != l.size()) {
      {if (true) throw new ErrorException(Flags.DUPLICATE_COLUMN_DEF_ERROR);}
    }
    // column?óê primary key ?Ñ§?†ï, Ï°¥Ïû¨?ïòÏß? ?ïä?äî column?ùº Í≤ΩÏö∞ ?óê?ü¨
    for (String pkc: pkcl) {
      boolean exist = false;
      for (Column c: t.getColumns()) {
        if (c.getName().equals(pkc)) {
          exist = true;
          c.setIsPrimaryKey(true);
          c.setIsNull(false);
          break;
        }
      }
      if (!exist) {
        {if (true) throw new ErrorException(Flags.NON_EXISTING_COLUMN_DEF_ERROR, pkc);}
      }
    }
    {if (true) return Flags.PRIMARY_KEY;}
      break;
    case FOREIGN_KEY:
      referentialConstraint(t);
    {if (true) return Flags.FOREIGN_KEY;}
      break;
    default:
      jj_la1[15] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  static final public ArrayList<Value> insertColumnsAndSource() throws ParseException {
                                              ArrayList<String> cnl = null; ArrayList<Value> vl;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LEFT_PAREN:
      cnl = columnNameList();
      break;
    default:
      jj_la1[16] = jj_gen;
      ;
    }
    vl = valueList();
    if (cnl != null) {
      if (cnl.size() == vl.size()) {
        for (int i = 0; i < cnl.size(); i++) {
          vl.get(i).setColumnName(cnl.get(i));
        }
      } else {
        {if (true) throw new ErrorException(Flags.INSERT_TYPE_MISMATCH_ERROR);}
      }
    }
    {if (true) return vl;}
    throw new Error("Missing return statement in function");
  }

  static final public ArrayList<Value> valueList() throws ParseException {
                                 Value v;
    ArrayList<Value> vl = new ArrayList<Value>();
    jj_consume_token(VALUES);
    jj_consume_token(LEFT_PAREN);
    v = value();
    vl.add(v);
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case COMMA:
        ;
        break;
      default:
        jj_la1[17] = jj_gen;
        break label_5;
      }
      jj_consume_token(COMMA);
      v = value();
      vl.add(v);
    }
    jj_consume_token(RIGHT_PAREN);
    {if (true) return vl;}
    throw new Error("Missing return statement in function");
  }

  static final public Value value() throws ParseException {
                  Value v = null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case NULL:
      jj_consume_token(NULL);
      break;
    case INT_VALUE:
    case DATE_VALUE:
    case CHAR_STRING:
      v = comparableValue();
      break;
    default:
      jj_la1[18] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    {if (true) return v;}
    throw new Error("Missing return statement in function");
  }

  static final public Value comparableValue() throws ParseException {
                            int iv; String sv; String dv;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INT_VALUE:
      jj_consume_token(INT_VALUE);
     iv = Integer.parseInt(token.image);
     {if (true) return new Value(new DataType(Flags.INT, 0), Integer.toString(iv));}
      break;
    case CHAR_STRING:
      jj_consume_token(CHAR_STRING);
    sv = token.image.toLowerCase();
    {if (true) return new Value(new DataType(Flags.CHAR, 0), sv);}
      break;
    case DATE_VALUE:
      jj_consume_token(DATE_VALUE);
    dv = token.image.toLowerCase();
    {if (true) return new Value(new DataType(Flags.DATE, 0), dv);}
      break;
    default:
      jj_la1[19] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  static final public void tableExpression() throws ParseException {
                           ArrayList<Table> tl; BooleanValueExpression bve = null;
    tl = fromClause();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case WHERE:
      bve = whereClause();
      break;
    default:
      jj_la1[20] = jj_gen;
      ;
    }
  }

  static final public void selectList() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ALL:
      jj_consume_token(ALL);
      break;
    case LEGAL_IDENTIFIER:
      selectedColumn();
      label_6:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case COMMA:
          ;
          break;
        default:
          jj_la1[21] = jj_gen;
          break label_6;
        }
        jj_consume_token(COMMA);
        selectedColumn();
      }
      break;
    default:
      jj_la1[22] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void selectedColumn() throws ParseException {
    if (jj_2_5(4)) {
      tableName();
      jj_consume_token(PERIOD);
    } else {
      ;
    }
    columnName();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case AS:
      jj_consume_token(AS);
      columnName();
      break;
    default:
      jj_la1[23] = jj_gen;
      ;
    }
  }

  static final public ArrayList<String> primaryKeyConstraint() throws ParseException {
                                             ArrayList<String> pkl;
    jj_consume_token(PRIMARY_KEY);
    pkl = columnNameList();
    {if (true) return pkl;}
    throw new Error("Missing return statement in function");
  }

  static final public void referentialConstraint(Table t) throws ParseException {
                                        ArrayList<String> cnl; String rtn; ArrayList<String> fknl;
    jj_consume_token(FOREIGN_KEY);
    cnl = columnNameList();
    jj_consume_token(REFERENCES);
    rtn = tableName();
    fknl = columnNameList();
    // foreign keyÍ∞? Ï°¥Ïû¨?ïòÏß? ?ïä?äî table?ùÑ Ï∞∏Ï°∞?ïò?äî Í≤ΩÏö∞
    if (!dbms.isExistingTable(rtn)) {
      {if (true) throw new ErrorException(Flags.REFERENCE_TABLE_EXISTENCE_ERROR);}
    }

    // foreign keyÍ∞? Ï∞∏Ï°∞?ïò?äî column?ùò Í∞úÏàòÍ∞? ?ã§Î•? Í≤ΩÏö∞
    if (cnl.size() != fknl.size()) {
      {if (true) throw new ErrorException(Flags.REFERENCE_TYPE_ERROR);}
    }

    String notExistingColumn;
    ArrayList<Column> rcl = new ArrayList<Column>();
    ArrayList<Column> cl = new ArrayList<Column>();

    // foreign keyÍ∞? Ï°¥Ïû¨?ïòÏß? ?ïä?äî column?ùÑ Ï∞∏Ï°∞?ïò?äî Í≤ΩÏö∞
    Table rt = dbms.getTable(rtn);
    notExistingColumn = dbms.compareColumnLists(fknl, rt.getColumns());
    if (notExistingColumn != null) {
      {if (true) throw new ErrorException(Flags.REFERENCE_COLUMN_EXISTENCE_ERROR);}
    }

    // Ï°¥Ïû¨?ïòÏß? ?ïä?äî Ïª¨Îüº?ùÑ foreign keyÎ°? ?†ï?ùò?ïú Í≤ΩÏö∞
    notExistingColumn = dbms.compareColumnLists(cnl, t.getColumns());
    if (notExistingColumn != null) {
      {if (true) throw new ErrorException(Flags.NON_EXISTING_COLUMN_DEF_ERROR, notExistingColumn);}
    }

    int len = cnl.size();
    // Ïß?Î™©Îêú column?ì§ Ï∂îÏ∂ú
    for (int i = 0; i < len; i++) {
      for (Column rc: rt.getColumns()) {
        if (rc.getName().equals(fknl.get(i))) {
          rcl.add(rc);
        }
      }
      for (Column c: t.getColumns()) {
        if (c.getName().equals(cnl.get(i))) {
          cl.add(c);
        }
      }
    }

    // primary keyÍ∞? ?ïÑ?ãå column?ùÑ Ï∞∏Ï°∞?ïò?äî Í≤ΩÏö∞
    for (Column c: cl) {
      if (c.getIsPrimaryKey()) {
        {if (true) throw new ErrorException(Flags.REFERENCE_NON_PRIMARY_KEY_ERROR);}
      }
    }

    // foreign keyÍ∞? Ï∞∏Ï°∞?ïò?äî column?ùò ???ûÖ?ù¥ ?ã§Î•? Í≤ΩÏö∞
    for (int i = 0; i < len; i++) {
      if (!cl.get(i).getDataType().toString().equals(rcl.get(i).getDataType().toString())) {
        {if (true) throw new ErrorException(Flags.REFERENCE_TYPE_ERROR);}
      }
    }

    // column?óê foreign key ?†ïÎ≥? ???û•
    for (int i = 0; i < len; i++) {
      cl.get(i).setIsForeignKey(true);
      cl.get(i).setForeignKey(rt, rcl.get(i));
      rcl.get(i).setIsReferenced(true);
    }
  }

  static final public ArrayList<String> columnNameList() throws ParseException {
                                       ArrayList<String> cl = new ArrayList<String>(); String cn;
    jj_consume_token(LEFT_PAREN);
    cn = columnName();
    cl.add(cn);
    label_7:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
